Logs/AssetImportWorker0.log
Using pre-set license
Pro License: NO

 COMMAND LINE ARGUMENTS:
/Applications/Unity/Hub/Editor/2021.1.14f1/Unity.app/Contents/MacOS/Unity
-adb2
-batchMode
-noUpm
-name
AssetImportWorker0
-projectPath
/Users/davidgordon/Documents/GitHub/FutureMountain
-logFile
Logs/AssetImportWorker0.log
-srvPort
52303
Successfully changed project path to: /Users/davidgordon/Documents/GitHub/FutureMountain
/Users/davidgordon/Documents/GitHub/FutureMountain
Using Asset Import Pipeline V2.
Refreshing native plugins compatible for Editor in 183.47 ms, found 4 plugins.
Preloading 0 native plugins for Editor in 0.00 ms.
Initialize engine version: 2021.1.14f1 (51d2f824827f)
[Subsystems] Discovering subsystems at path /Applications/Unity/Hub/Editor/2021.1.14f1/Unity.app/Contents/Resources/UnitySubsystems
[Subsystems] Discovering subsystems at path /Users/davidgordon/Documents/GitHub/FutureMountain/Assets
GfxDevice: creating device client; threaded=0; jobified=0
2021-08-01 14:10:08.740 Unity[4529:74066] Color LCD preferred device: AMD Radeon Pro 560X (high power)
2021-08-01 14:10:08.741 Unity[4529:74066] Metal devices available: 2
2021-08-01 14:10:08.741 Unity[4529:74066] 0: AMD Radeon Pro 560X (high power)
2021-08-01 14:10:08.741 Unity[4529:74066] 1: Intel(R) UHD Graphics 630 (low power)
2021-08-01 14:10:08.741 Unity[4529:74066] Using device AMD Radeon Pro 560X (high power)
Initializing Metal device caps: AMD Radeon Pro 560X
Initialize mono
Mono path[0] = '/Applications/Unity/Hub/Editor/2021.1.14f1/Unity.app/Contents/Managed'
Mono path[1] = '/Applications/Unity/Hub/Editor/2021.1.14f1/Unity.app/Contents/MonoBleedingEdge/lib/mono/unityjit'
Mono config path = '/Applications/Unity/Hub/Editor/2021.1.14f1/Unity.app/Contents/MonoBleedingEdge/etc'
Using monoOptions --debugger-agent=transport=dt_socket,embedding=1,server=y,suspend=n,address=127.0.0.1:56529
Begin MonoManager ReloadAssembly
Registering precompiled unity dll's ...
Register platform support module: /Applications/Unity/Hub/Editor/2021.1.14f1/PlaybackEngines/WebGLSupport/UnityEditor.WebGL.Extensions.dll
Register platform support module: /Applications/Unity/Hub/Editor/2021.1.14f1/Unity.app/Contents/PlaybackEngines/MacStandaloneSupport/UnityEditor.OSXStandalone.Extensions.dll
Register platform support module: /Applications/Unity/Hub/Editor/2021.1.14f1/PlaybackEngines/WindowsStandaloneSupport/UnityEditor.WindowsStandalone.Extensions.dll
Registered in 0.002956 seconds.
Native extension for WindowsStandalone target not found
Native extension for OSXStandalone target not found
Native extension for WebGL target not found
Refreshing native plugins compatible for Editor in 138.98 ms, found 4 plugins.
Preloading 0 native plugins for Editor in 0.00 ms.
Mono: successfully reloaded assembly
- Completed reload, in  5.194 seconds
Domain Reload Profiling:
	ReloadAssembly (5194ms)
		BeginReloadAssembly (43ms)
			ExecutionOrderSort (0ms)
			DisableScriptedObjects (0ms)
			BackupInstance (0ms)
			ReleaseScriptingObjects (0ms)
			CreateAndSetChildDomain (1ms)
		EndReloadAssembly (594ms)
			LoadAssemblies (44ms)
			RebuildTransferFunctionScriptingTraits (0ms)
			SetupTypeCache (211ms)
			ReleaseScriptCaches (0ms)
			RebuildScriptCaches (39ms)
			SetupLoadedEditorAssemblies (297ms)
				LogAssemblyErrors (0ms)
				InitializePlatformSupportModulesInManaged (7ms)
				SetLoadedEditorAssemblies (0ms)
				RefreshPlugins (139ms)
				BeforeProcessingInitializeOnLoad (1ms)
				ProcessInitializeOnLoadAttributes (117ms)
				ProcessInitializeOnLoadMethodAttributes (32ms)
				AfterProcessingInitializeOnLoad (0ms)
				EditorAssembliesLoaded (0ms)
			ExecutionOrderSort2 (0ms)
			AwakeInstancesAfterBackupRestoration (0ms)
Platform modules already initialized, skipping
Registering precompiled user dll's ...
Registered in 0.022863 seconds.
Begin MonoManager ReloadAssembly
Symbol file LoadedFromMemory doesn't match image /Users/davidgordon/Documents/GitHub/FutureMountain/Assets/Utilities/Serialization/Assets/Dlls/ZeroFormatter.dll
Symbol file LoadedFromMemory doesn't match image /Users/davidgordon/Documents/GitHub/FutureMountain/Library/PackageCache/com.unity.visualscripting@1.6.1/Editor/VisualScripting.Core/Dependencies/DotNetZip/Unity.VisualScripting.IonicZip.dll
Symbol file LoadedFromMemory doesn't match image /Users/davidgordon/Documents/GitHub/FutureMountain/Library/PackageCache/com.unity.visualscripting@1.6.1/Editor/VisualScripting.Core/Dependencies/YamlDotNet/Unity.VisualScripting.YamlDotNet.dll
Symbol file LoadedFromMemory doesn't match image /Users/davidgordon/Documents/GitHub/FutureMountain/Assets/Utilities/Serialization/Assets/Dlls/ZeroFormatter.Interfaces.dll
Native extension for WindowsStandalone target not found
Native extension for OSXStandalone target not found
Native extension for WebGL target not found
Refreshing native plugins compatible for Editor in 1.31 ms, found 4 plugins.
Preloading 0 native plugins for Editor in 0.00 ms.
Mono: successfully reloaded assembly
- Completed reload, in  2.411 seconds
Domain Reload Profiling:
	ReloadAssembly (2412ms)
		BeginReloadAssembly (164ms)
			ExecutionOrderSort (0ms)
			DisableScriptedObjects (5ms)
			BackupInstance (0ms)
			ReleaseScriptingObjects (0ms)
			CreateAndSetChildDomain (36ms)
		EndReloadAssembly (2179ms)
			LoadAssemblies (135ms)
			RebuildTransferFunctionScriptingTraits (0ms)
			SetupTypeCache (635ms)
			ReleaseScriptCaches (1ms)
			RebuildScriptCaches (102ms)
			SetupLoadedEditorAssemblies (1138ms)
				LogAssemblyErrors (0ms)
				InitializePlatformSupportModulesInManaged (6ms)
				SetLoadedEditorAssemblies (0ms)
				RefreshPlugins (1ms)
				BeforeProcessingInitializeOnLoad (92ms)
				ProcessInitializeOnLoadAttributes (412ms)
				ProcessInitializeOnLoadMethodAttributes (624ms)
				AfterProcessingInitializeOnLoad (2ms)
				EditorAssembliesLoaded (0ms)
			ExecutionOrderSort2 (0ms)
			AwakeInstancesAfterBackupRestoration (9ms)
Platform modules already initialized, skipping
========================================================================
Worker process is ready to serve import requests
Launching external process: /Applications/Unity/Hub/Editor/2021.1.14f1/Unity.app/Contents/Tools/UnityShaderCompiler
Launched and connected shader compiler UnityShaderCompiler after 0.02 seconds
Compilation failed: 

program_source:4:8: error: unknown type name 'Mtl_VertexOut'
vertex Mtl_VertexOut xlatMtlMain(
       ^
program_source:7:12: error: use of undeclared identifier 'output'
    return output;
           ^



#include <metal_stdlib>
#include <metal_texture>
using namespace metal;
vertex Mtl_VertexOut xlatMtlMain(
)
{
    return output;
}
Refreshing native plugins compatible for Editor in 1.50 ms, found 4 plugins.
Preloading 0 native plugins for Editor in 0.00 ms.
Unloading 4233 Unused Serialized files (Serialized files now loaded: 0)
System memory in use before: 435.0 MB.
System memory in use after: 424.3 MB.

Unloading 84 unused Assets to reduce memory usage. Loaded Objects now: 4646.
Total: 11.773997 ms (FindLiveObjects: 0.369160 ms CreateObjectMapping: 0.247182 ms MarkObjects: 5.972422 ms  DeleteObjects: 5.184019 ms)

AssetImportParameters requested are different than current active one (requested -> active):
  custom:video-decoder-ogg-theora: a1e56fd34408186e4bbccfd4996cb3dc -> 
  custom:container-muxer-webm: aa71ff27fc2769a1b78a27578f13a17b -> 
  custom:container-demuxer-webm: 4f35f7cbe854078d1ac9338744f61a02 -> 
  custom:container-demuxer-ogg: 62fdf1f143b41e24485cea50d1cbac27 -> 
  custom:video-encoder-webm-vp8: eb34c28f22e8b96e1ab97ce403110664 -> 
  custom:framework-osx-AVFoundation: b23960f63f64bdc6ff669e2cdcee2391 -> 
  custom:video-decoder-webm-vp8: 9c59270c3fd7afecdb556c50c9e8de78 -> 
  custom:audio-decoder-ogg-vorbis: bf7c407c2cedff20999df2af8eb42d56 -> 
  custom:audio-encoder-webm-vorbis: bf7c407c2cedff20999df2af8eb42d56 -> 
========================================================================
Received Import Request.
  path: Assets/Scenes/FutureMountain/FutureMountain.unity
  artifactKey: Guid(a2184b444162242f58be7ba20b64b6e4) Importer(815301076,1909f56bfc062723c751e8b465ee728b)
Start importing Assets/Scenes/FutureMountain/FutureMountain.unity using Guid(a2184b444162242f58be7ba20b64b6e4) Importer(815301076,1909f56bfc062723c751e8b465ee728b)  -> (artifact id: '5dc3cbca32524eb5c09d38bad856f165') in 0.017416 seconds 
AssetImportWorkerClient::OnTransportError - code=2 error=End of file
